Se agregaron imagenes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <body>
 <h1>Hola GIT</h1>
 
-<p>PAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+<p>GIT RAMA PRUEBA</p>
+
+<img class="mediana" src="img/arrachera.jpg"/>
+<img class="mediana" src="img/cowboy.jpg"/>
+<img class="mediana" src="img/kansas.jpg"/>
+
 </body>
 </html>
